--- a/install.yaml
+++ b/install.yaml
@@ -12,10 +12,15 @@
     grid_home: /u01/app/grid/product/12.1.0.2/dbhome_1
     grid_zip_part1: linuxamd64_12102_grid_1of2.zip
     grid_zip_part2: linuxamd64_12102_grid_2of2.zip
-    grid_asmdisk: [ { dev: '/dev/sdc1', asm: 'ASM_DATA_01' }, { dev: '/dev/sdd1', asm: 'ASM_DATA_02' } ]
+    grid_dgname: 'DG_DATA'
+    grid_asmdisk: [ { dev: '/dev/sdb1', asm: 'ASM_DATA_01' }, { dev: '/dev/sdc1', asm: 'ASM_DATA_02' } ]
     grid_disklist: "" # LAISSER VIDE
     grid_asmlib: oracleasmlib-2.0.12-1.el7.x86_64.rpm
     grid_asmsupport: oracleasm-support-2.1.8-3.el7.x86_64.rpm
+    # ASM DG (2nd)
+    asmdg_disklist: "" # LAISSER VIDE
+    asmdg_dgname: 'DG_FRA'
+    asmdg_asmdisk: [ { dev: '/dev/sdd1', asm: 'ASM_FRA_01' }, { dev: '/dev/sde1', asm: 'ASM_FRA_02' } ]
     # GRID PSU
     grid_psu: p24412235_121020_Linux-x86-64.zip
     grid_psu_number: 24412235
@@ -38,20 +43,24 @@
     dbca_pwdsystem: Password1
     dbca_charset: WE8ISO8859P15
     dbca_ncharset: UTF8
-    dbca_initparam_sgamax_mb: 2048
-    dbca_initparam_sga_mb: 2048
+    dbca_initparam_sgamax_mb: 512
+    dbca_initparam_sga_mb: 512
     dbca_initparam_pga_mb: 100
     dbca_initparam_dbrecoverydest: /u01/app/oracle/fra/
     dbca_initparam_dbrecoverydestsize: 1024
     #dbca_initparam_oradata: /u01/app/oracle/oradata/
-    dbca_initparam_oradata: +DG_DATA
-    dbca_initparam_redologdest1: /u01/app/oracle/fra/
-    dbca_initparam_redologdest2: /u01/app/oracle/oradata/
+    dbca_initparam_oradata: '+DG_DATA'
+    #dbca_initparam_redologdest1: /u01/app/oracle/fra/
+    #dbca_initparam_redologdest2: /u01/app/oracle/oradata/
+    dbca_initparam_redologdest1: '+DG_FRA'
+    dbca_initparam_redologdest2: '+DG_DATA'
 
   roles:
     - updateLinux
     - prereqOracle
     - installGrid
+    - installGridPsu
+    - createAsmDg
     - installRdbms
     - installRdbmsPsu
     - createListener
