--- a/roles/installGrid/tasks/main.yaml
+++ b/roles/installGrid/tasks/main.yaml
@@ -2,7 +2,7 @@
 
 - name: concat disk
   set_fact:
-    grid_disklist: "{{ grid_disklist + '/dev/oracleasm/disks/' + item.asm + ',' }}"
+    grid_disklist: "{{ grid_disklist + 'ORCL:' + item.asm + ',' }}"
   with_items:
      "{{ grid_asmdisk }}"
 
@@ -65,7 +65,7 @@
   failed_when: "'ERROR' in configToolAllCommands.stdout"
 
 - name: create asm instance
-  shell: "{{ grid_home }}/bin/asmca -silent -configureASM -sysAsmPassword {{ dbca_pwdsys }} -asmsnmpPassword {{ dbca_pwdsys }} -diskstring /dev/oracleasm/disks/ -diskGroupName DG_DATA -diskList {{ grid_disklist[:-1] }} -redundancy EXTERNAL"
+  shell: "{{ grid_home }}/bin/asmca -silent -configureASM -sysAsmPassword {{ dbca_pwdsys }} -asmsnmpPassword {{ dbca_pwdsys }} -diskstring 'ORCL:*' -diskGroupName {{ grid_dgname }} -diskList {{ grid_disklist[:-1] }} -redundancy EXTERNAL"
   become: true
   become_user: grid
   register: asmca
