--- a/roles/installRdbms/tasks/main.yaml
+++ b/roles/installRdbms/tasks/main.yaml
@@ -1,5 +1,21 @@
 ---
 
+- name: change binaries owner to oracle
+  file: path={{ item }} owner=oracle group=oinstall
+  with_items:
+    - "{{ patch_dir }}/{{ rdbms_zip_part1 }}"
+    - "{{ patch_dir }}/{{ rdbms_zip_part2 }}"
+
+- name: unzip RDBMS installer (1/2)
+  unarchive: src={{ patch_dir }}/{{ rdbms_zip_part1 }} dest={{ patch_dir }} remote_src=yes
+  become: true
+  become_user: oracle
+
+- name: unzip RDBMS installer (2/2)
+  unarchive: src={{ patch_dir }}/{{ rdbms_zip_part2 }} dest={{ patch_dir }} remote_src=yes
+  become: true
+  become_user: oracle
+
 - name: create rdbms responsefile
   template: src=rdbms.rsp.tpl dest={{ patch_dir }}/rdbms.rsp owner=oracle group=oinstall mode=0755
 
