--- a/roles/installRdbms/tasks/main.yaml
+++ b/roles/installRdbms/tasks/main.yaml
@@ -31,3 +31,6 @@
 
 - name: execute orainstRoot.sh
   shell: "{{ oracle_home }}/root.sh"
+
+- name: clean unzipped
+  file: path={{ patch_dir }}/database state=absent
