--- a/roles/updateLinux/tasks/main.yaml
+++ b/roles/updateLinux/tasks/main.yaml
@@ -10,15 +10,14 @@
   environment:
      http_proxy: "{{ proxy }}"
 
-- name: install new packages
-  yum: name=compat-libcap1,compat-libstdc++-33,cpp,gcc,gcc-c++,glibc-devel,glibc-headers,kernel-headers,libXmu,libXt,ksh,libXxf86misc,libXxf86vm,libaio-devel,libdmx,libstdc++-devel,mpfr,make,xorg-x11-utils,xorg-x11-xauth,libXv,libXxf86dga,rsync,unzip state=latest
-  environment:
-     http_proxy: "{{ proxy }}"
+- name: include rhel/centos spec
+  include: rhel.yaml
+  when: (ansible_distribution == "CentOS" and ansible_distribution_major_version == "7")
+        (ansible_distribution == "RedHat" and ansible_distribution_major_version == "7")
 
-- name: install 'X Window System' package group
-  yum: name="@X Window System" state=present
-  environment:
-     http_proxy: "{{ proxy }}"
+- name: include oracle linux spec
+  include: oraclelinux.yaml
+  when: (ansible_distribution == "OracleLinux" and ansible_distribution_major_version == "7")
 
 - name: install python-selinux
   yum: name=libselinux-python state=installed
