--- a/roles/updateLinux/tasks/main.yaml
+++ b/roles/updateLinux/tasks/main.yaml
@@ -12,7 +12,7 @@
 
 - name: include rhel/centos spec
   include: rhel.yaml
-  when: (ansible_distribution == "CentOS" and ansible_distribution_major_version == "7")
+  when: (ansible_distribution == "CentOS" and ansible_distribution_major_version == "7") or
         (ansible_distribution == "RedHat" and ansible_distribution_major_version == "7")
 
 - name: include oracle linux spec
