--- a/install.yaml
+++ b/install.yaml
@@ -57,15 +57,15 @@
 
   roles:
     - updateLinux
-#    - prereqOracle
-#    - installGrid
-#    - installGridPsu
-#    - createAsmDg
-#    - installRdbms
-#    - installRdbmsPsu
-#    - createListener
-#    - createDatabase
-#    - cleanInstallDir
+    - prereqOracle
+    - installGrid
+    - installGridPsu
+    - createAsmDg
+    - installRdbms
+    - installRdbmsPsu
+    - createListener
+    - createDatabase
+    - cleanInstallDir
 
 
 
